fixed header small size issue on small view

--- a/style/header.css
+++ b/style/header.css
@@ -2,14 +2,14 @@ header {
   background-color: var(--header-background);
   color: var(--text);
   transition: background-color 0.3s, color 0.3s;
-  /* position: absolute; */
+  position: initial;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px 15px;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  min-height: 70px;
 }
 
 html.dark-mode header {
@@ -23,9 +23,9 @@ html.dark-mode header {
 }
 
 .header-button:hover {
-  /* background-color: var(--hover); */
   color: var(--accent);
 }
+
 html.dark-mode .header-button:hover {
   background-color: var(--dark-hover);
   color: var(--text);
@@ -46,12 +46,9 @@ html.dark-mode .header-button {
 }
 
 #logo {
-  margin-left: 2px;
-  height: 10px;
-  border: 1px solid;
-  width: 10px;
+  margin: 0 2px;
   height: auto;
-  margin-right: 2px;
+  width: auto;
   align-items: center;
 }
 
@@ -59,12 +56,12 @@ html.dark-mode .header-button {
   justify-content: center;
   justify-self: center;
   display: flex;
-  align-content: center;
   align-items: center;
   align-self: center;
   width: 50px;
   height: 40px;
   cursor: pointer;
+  padding: 8px;
 }
 
 body .bar1,
@@ -72,6 +69,7 @@ body .bar2,
 body .bar3 {
   background-color: black;
 }
+
 html.dark-mode .bar1,
 html.dark-mode .bar2,
 html.dark-mode .bar3 {
@@ -85,6 +83,7 @@ html.dark-mode .bar3 {
 .menu-dropdown {
   background-color: var(--background);
 }
+
 html.dark-mode .menu-dropdown {
   background-color: var(--dark-background);
 }
@@ -92,6 +91,7 @@ html.dark-mode .menu-dropdown {
 .menu > button {
   background-color: var(--header-background);
 }
+
 html.dark-mode .menu > button {
   background-color: var(--dark-header-background);
 }
@@ -100,12 +100,13 @@ html.dark-mode .menu > button {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 .left-side {
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
 }
 
@@ -116,6 +117,7 @@ html.dark-mode .menu > button {
 
 .menu > button {
   border-style: none;
+  padding: 8px;
 }
 
 .menu > button:hover {
@@ -148,6 +150,7 @@ html.dark-mode .menu-dropdown {
   z-index: 1000;
   cursor: pointer;
 }
+
 .change .menu-dropdown {
   right: 0;
 }
@@ -198,7 +201,7 @@ html.dark-mode .menu-dropdown {
 
 #logo-middle-sm {
   display: flex;
-  height: 60px;
+  height: 50px;
   width: auto;
 }
 
@@ -209,14 +212,13 @@ html.dark-mode .menu-dropdown {
 
   #nav-button > ul {
     display: flex;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
+    padding: 10px 0;
     gap: 10px;
     justify-content: center;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
   }
+
   #nav-button > ul > li {
     padding: 0 5px;
     list-style-type: none;
@@ -238,6 +240,7 @@ html.dark-mode .menu-dropdown {
     align-items: center;
     text-align: center;
   }
+
   #profile-a {
     width: min-content;
     height: min-content;
@@ -262,14 +265,14 @@ html.dark-mode .menu-dropdown {
   #logo-middle-sm {
     display: none;
   }
+
   #logo-with-name {
     width: auto;
-    padding: none;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 0 10px;
     height: 60px;
     display: flex;
   }
+
   .bar1,
   .bar2,
   .bar3 {
@@ -292,6 +295,7 @@ html.dark-mode .menu-dropdown {
     width: 20px;
     height: 20px;
   }
+
   .bar1,
   .bar2,
   .bar3 {
